--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,19 @@
     p {
         color:white;
         background-color: cadetblue;
+        width: 500px;
+        text-align: center;
     }
     .deux {
          background-color: blue;
     }
     body {
         background-color: aqua;
+    }
+    img {
+        height: 400px;
+        border-style: solid;
+        border-width: 4px;
+        border-color: white;
+        border-radius: 10px;
     }
