--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
     p {
         color:white;
         background-color: cadetblue;
-        width: 500px;
-        text-align: center;
+        width: 100%;
+        text-align: justify;
     }
     .deux {
          background-color: blue;
@@ -17,4 +17,11 @@
         border-width: 4px;
         border-color: white;
         border-radius: 10px;
+        padding:40px
+    }
+
+    .boite1{
+        border-style:solid;
+        border-width:3px;
+        width: 500px;
     }
