--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,18 @@
         border-color: white;
         border-radius: 10px;
         padding:40px
+    
     }
 
     .boite1{
         border-style:solid;
         border-width:3px;
         width: 500px;
+    }
+
+    #login{
+        border-style: solid;
+        border-width: 1px;
+        width: 30%;
+        margin-left:35%
     }
